fix(PDS-1861): add pre-wrap for HeroMain title

--- a/packages/site-hero/src/components/HeroMain/styles.module.scss
+++ b/packages/site-hero/src/components/HeroMain/styles.module.scss
@@ -83,6 +83,7 @@
 .title {
   color: ds.$sys-neutral-text-main;
   word-break: break-word;
+  white-space: pre-wrap;
   max-width: 720px;
 }
 
